--- a/Assets/WebGLTemplates/AgoraTemplate/index.html
+++ b/Assets/WebGLTemplates/AgoraTemplate/index.html
@@ -7,6 +7,8 @@
       <link rel="stylesheet" href="AgoraWebSDK/style.css">
       <script src="Build/UnityLoader.js"></script>
 	  <script src="AgoraWebSDK/libs/databuilder.js"></script>
+	  <script src="AgoraWebSDK/libs/agora-extension-virtual-background.js"></script>
+	  <script src="AgoraWebSDK/libs/virtualbackground.js"></script>
 	  <script src="AgoraWebSDK/libs/clientmanager.js"></script>
 	  <script src="AgoraWebSDK/libs/wglwrapper.js"></script>	  
 	  <script src="AgoraWebSDK/libs/audioeffects.js"></script>
