--- a/Assets/WebGLTemplates/AgoraTemplate2020/index.html
+++ b/Assets/WebGLTemplates/AgoraTemplate2020/index.html
@@ -7,7 +7,8 @@
 	<title>TEST Unity WebGL Player | {{{ PRODUCT_NAME }}}</title>
 	<link rel="shortcut icon" href="TemplateData/favicon.ico">
 	<link rel="stylesheet" href="TemplateData/style.css">
-
+	<script src="AgoraWebSDK/libs/agora-extension-virtual-background.js"></script>
+	<script src="AgoraWebSDK/libs/virtualbackground.js"></script>
 	<script src="AgoraWebSDK/libs/databuilder.js"></script>
 	<script src="AgoraWebSDK/libs/clientmanager.js"></script>
 	<script src="AgoraWebSDK/libs/wglwrapper.js"></script>
