--- a/Assets/WebGLTemplates/AgoraTemplate/index.html
+++ b/Assets/WebGLTemplates/AgoraTemplate/index.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="AgoraWebSDK/style.css">
       <script src="Build/UnityLoader.js"></script>
 	  <script src="AgoraWebSDK/libs/databuilder.js"></script>
+	  <script src="AgoraWebSDK/libs/spatial-audio-main.js" type="module"></script>
 	  <script src="AgoraWebSDK/libs/clientmanager.js"></script>
 	  <script src="AgoraWebSDK/libs/wglwrapper.js"></script>	  
 	  <script src="AgoraWebSDK/libs/audioeffects.js"></script>
@@ -24,6 +25,7 @@
 	  <script src="AgoraWebSDK/vendor/materialize.min.js"></script>
 	  <script src="AgoraRTC_N.js"></script>
 	  <script src="AgoraWebSDK/vendor/jquery.min.js"></script>
+	  
 
    </head>
 
