updates for spatial audio

--- a/Assets/WebGLTemplates/AgoraTemplate/index.html
+++ b/Assets/WebGLTemplates/AgoraTemplate/index.html
@@ -5,9 +5,10 @@
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <title>Unity WebGL Player | %UNITY_WEB_NAME%</title>
       <link rel="stylesheet" href="AgoraWebSDK/style.css">
+	  <script src="AgoraWebSDK/libs/resources/jquery-3.4.1.min.js"></script>
+  	  <script src="AgoraWebSDK/libs/resources/bootstrap.bundle.min.js"></script>
       <script src="Build/UnityLoader.js"></script>
 	  <script src="AgoraWebSDK/libs/databuilder.js"></script>
-	  <script src="AgoraWebSDK/libs/spatial-audio-main.js" type="module"></script>
 	  <script src="AgoraWebSDK/libs/clientmanager.js"></script>
 	  <script src="AgoraWebSDK/libs/wglwrapper.js"></script>	  
 	  <script src="AgoraWebSDK/libs/audioeffects.js"></script>
@@ -24,6 +25,7 @@
 	  <script src="AgoraWebSDK/agorartcenginev2.js"></script>
 	  <script src="AgoraWebSDK/vendor/materialize.min.js"></script>
 	  <script src="AgoraRTC_N.js"></script>
+	  <script src="AgoraWebSDK/libs/spatial-audio-main.js" type="module"></script>
 	  <script src="AgoraWebSDK/vendor/jquery.min.js"></script>
 	  
 
