updates for spatial audio API demo

--- a/Assets/WebGLTemplates/AgoraTemplate/index.html
+++ b/Assets/WebGLTemplates/AgoraTemplate/index.html
@@ -25,6 +25,7 @@
 	  <script src="AgoraWebSDK/agorartcenginev2.js"></script>
 	  <script src="AgoraWebSDK/vendor/materialize.min.js"></script>
 	  <script src="AgoraRTC_N.js"></script>
+	  <script src="AgoraWebSDK/libs/spatial-audio-main.js" type="module"></script>
 	  <script src="AgoraWebSDK/vendor/jquery.min.js"></script>
 
    </head>
