--- a/Assets/WebGLTemplates/AgoraTemplate/index.html
+++ b/Assets/WebGLTemplates/AgoraTemplate/index.html
@@ -76,6 +76,7 @@
 		var canvasWidth = mainCanvas.width;
 		var canvasHeight = mainCanvas.height;
 	</script>
+	<p><a href="https://github.com/AgoraIO-Community/Agora_Unity_WebGL">Code</a> | <a href="https://github.com/AgoraIO-Community/Agora_Unity_WebGL/wiki">Wiki</a> | <a href="https://github.com/AgoraIO-Community/Agora_Unity_WebGL/discussions">Discussions</a></p>
 
    </body>
 </html>
