updated webpage layout

--- a/Assets/WebGLTemplates/AgoraTemplate2020/index.html
+++ b/Assets/WebGLTemplates/AgoraTemplate2020/index.html
@@ -31,6 +31,7 @@
 
 <body>
 	<div id="unity-container" class="unity-desktop">
+		<div id="unity-build-title">{{{ PRODUCT_NAME }}}</div>
 		<canvas id="unity-canvas"></canvas>
 		<div id="unity-loading-bar">
 			<div id="unity-logo"></div>
@@ -44,7 +45,7 @@
 		<div id="unity-footer">
 			<div id="unity-webgl-logo"></div>
 			<div id="unity-fullscreen-button"></div>
-			<div id="unity-build-title">{{{ PRODUCT_NAME }}}</div>
+			<div id="unity-links"><p class="center"><a href="https://github.com/AgoraIO-Community/Agora_Unity_WebGL">Code</a> | <a href="https://github.com/AgoraIO-Community/Agora_Unity_WebGL/wiki">Wiki</a> | <a href="https://github.com/AgoraIO-Community/Agora_Unity_WebGL/discussions">Discussions</a></p></div>
 		</div>
 	</div>
 
